<resources>
    <string name="app_name">Tibetan Buddhist Prayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="engtabtitle">English</string>
    <string name="tibtabtitle">བོད་ཡིག</string>
    <string name="engIndex">Index</string>
    <string name="text_with_paragraphs">
        Can this contain a lot of text? Can it contain \n a newline? Yes, it can.
        Adding a 2nd line like this should work.
        It should not cause parsing errors.
    </string>
    <string name="contacttext">Write us </string>
    <string name="abouttxt">About</string>
    <string name="moreappstxt">More Apps</string>
    <string name="fontsizetext">Adjust Font Size</string>
    <string name="aboutus">About Us</string>
    <string name="otherappContent">Coming Soon</string>
    <string name="contactemail">support@kotlab.com</string>
    <string name="aboutustxt">Buddhist Daily Prayer app is a one stop app for the Buddhist practitioners. It will provide easy,portable and digitized buddhist prayers. This app is non-commercial and it is dedicated to preserve and promote the religious activities so that every practitioner will benefit from it.Current app is a lite version and it will be developed in forth coming days.
</string>
    <string name="addcounttxt">Count</string>
    <string name="ematat">at</string>
    <string name="contactustxt">Contact us</string>
    <string name="otherapptxt">Other Apps</string>
    <string name="hometitle">TIBETAN DIGITAL PECHA</string>
    <string name="txtCounten">Count</string>
    <string name="previewtxt">Preview</string>
    <string name="previewtxtcontent">Om ah hung</string>
    <string name="resettxt">Reset Count</string>
    <string name="fontsizedonetxt">Reset Size</string>
    <string name="tibIndex">དཀར་ཆག</string>
    <string name="tibcounttxt">གྲངས་གསོག</string>
    <string name="txtCountentib">dfd</string>
    <string name="text_with_paragraphstib">གལ་ཏེ་འཕོ་བ་མ་ཐེབ་ན་ཐོས་གྲོལ་འདི་རོའི་རྩར་སྒྲ་དག་ལ་ཚིག་གསལ་བར་ཀློག་པར་བྱའོ། རོ་མེད་ན་ཚེ་འདས་ཀྱི་མལ་ས་འམ་འདུག་སར་བསྡད་ལ། བདེན་པའི་སྟོབས་བརྗོད་ལ་རྣམ་ཤེས་བཀུག་ནས། མདུན་དུ་ཉན་པར་དམིགས་ཤིང་ཀློག་པར་བྱའོ། འདེའི་དུས་ཉེ་དུ་དང་སེམས་ལ་བརྩེ་བའི་མཛའ་བོ་ཚོས་ངུ་སྐད་དང་། སྨྲེ་སྔགས་ཡེ་ནས་འདོན་དུ་མི་རུང་བས་དམ་བསྒྲགས་པའོ། རོ་ཡོད་ན་ཕྱི་དབུགས་ཆད་པའི་མཚམས་སུ་བླ་མའམ་མཆེད་གྲོགས་སམ། དད་པ་ཐོབ་པ། ཡིད་མཐུན་པའི་གྲོགས་མཆེད་ལ་སོགས་པས། རྣ་བར་མཆུ་མ་རེག་ཙམ་དུ་གཏད་ལ། ཐོས་གྲོལ་ཆེན་མོ་འདི་ཀློག་པར་བྱའོ། </string>
    <string name="txtpecha">ཉིན་རེའི་ཞལ་འདོན།</string>
    <string name="tibtitletxtheader">༈ བར་དོ་ཐོས་གྲོལ་ཆེན་མོ་བཞུགས་སོ།</string>
    <string name="endetailtext">Daily Prayer</string>
    <string name="previewtxttibetan">ཨོ་ཨ་ཧཱུཿ</string>
    <string name="contacwhatsapp">+91-8588072204</string>
    <string name="myprayertitle">My Prayers</string>
    <string name="myPrayerIndex">My Prayer</string>
    <string name="addtomyprayer">Add to My Prayer</string>
    <string name="menusharetxt">Share Prayer</string>
    <string name="action_search">Search</string>
    <string name="tibqueryhint">འཚོལ་ཞིབ་</string>
    <string name="poweredbytext">Powered by Kotlab</string>

</resources>
